This file documents the revision history for Perl extension Mojolicious.

2.86  2012-04-20
  - Improved documentation.

2.85  2012-04-19
  - Modernized ".perltidyrc".
  - Improved documentation. (diegok, sri)
  - Fixed bug in "user_agent.t".

2.84  2012-04-19
  - Improved documentation.
  - Improved tests.
  - Fixed flash.

2.83  2012-04-18
  - Added hostname verification support to Mojo::IOLoop::Client and
    Mojo::UserAgent.
  - Added SNI support to Mojo::IOLoop::Client and Mojo::UserAgent.
  - Improved documentation.
  - Fixed bug that prevented conditions to work in embedded applications.
  - Fixed bug that changed default values in embedded applications.
  - Fixed small bug in cpanify command.

2.82  2012-04-16
  - Deprecated relaxed placeholders "/(.foo)" in favor of "/#foo".
  - Deprecated Mojolicious::Routes::Route->waypoint.
  - Deprecated Mojolicious::Routes::Route->block.
  - Improved Mojolicious::Routes::Pattern to render formats.
  - Improved regex formatting in routes command.
  - Improved documentation.
  - Improved tests.

2.81  2012-04-15
  - Improved router to allow disabled format detection to be inheritable by
    nested routes.
  - Improved error handling in Mojolicious::Plugin::JSONConfig.
  - Improved match method in Mojolicious::Routes::Pattern to support format
    detection.
  - Improved router log messages.
  - Improved all debug messages.
  - Improved documentation.
  - Improved tests.
  - Fixed format detection bugs in Mojolicious::Routes::Pattern.
  - Fixed format handling in routes command.

2.80  2012-04-10
  - Added support for alternative MIME types to Mojolicious::Types.
  - Added endpoint method to Mojo::UserAgent::Transactor.
  - Improved tests.
  - Fixed HTTPS proxy keep alive bug in Mojo::UserAgent.

2.79  2012-04-10
  - Improved makefile and plugin generators to always use the latest
    Mojolicious version.
  - Improved documentation.
  - Improved tests.
  - Fixed HTTPS proxy support in Mojo::UserAgent.